--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,9 +43,9 @@ else()
 endif()
 
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O3")
-set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -g -O3")
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O3")
+#set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -g -O3")
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -no-pie -g")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -no-pie -g")
