windows: add the icon to the binary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -346,6 +346,10 @@ set(SOURCES ${SOURCES}
     external/imgui/imgui_demo.cpp
 )
 
+if(WINDOWS)
+    set(SOURCES ${SOURCES} misc/resources.rc)
+endif()
+
 include(GenerateLuaFiles)
 
 if(WINDOWS)
