CMakeLists.txt: add USE_PLAMBDA option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ option(USE_LIBRAW "compile with LibRAW support" OFF)
 option(USE_GDAL "compile with GDAL support" OFF)
 option(USE_IIO "compile with IIO support" ON)
 option(USE_IIO_NPY "compile with IIO numpy support" ON)
+cmake_dependent_option(USE_PLAMBDA "compile with plambda support" ON "USE_IIO" OFF)
 
 if(MSYS OR MSVC)
 	set(WINDOWS 1)
@@ -319,7 +320,6 @@ set(SOURCES ${SOURCES}
     src/shaders.cpp
     src/layout.cpp
     src/watcher.cpp
-    src/wrapplambda.c
     src/SVG.cpp
     src/Histogram.cpp
     src/config.cpp
@@ -337,6 +337,12 @@ set(SOURCES ${SOURCES}
     external/imgui/imgui_draw.cpp
     external/imgui/imgui_demo.cpp
 )
+
+if(USE_PLAMBDA)
+    set(SOURCES ${SOURCES}
+        src/wrapplambda.c
+    )
+endif()
 
 if(WINDOWS)
     set(SOURCES ${SOURCES} misc/resources.rc)
