--- a/.drone.yml
+++ b/.drone.yml
@@ -47,7 +47,10 @@ steps:
   image: ubuntu:bionic
   commands:
   - apt-get update
-  - apt-get install -qq build-essential cmake
+  - apt-get install -qq build-essential wget
+    # install a custom version of cmake because bionic is old
+  - wget https://github.com/Kitware/CMake/releases/download/v3.13.5/cmake-3.13.5-Linux-x86_64.tar.gz -O cmake.tar.gz
+  - tar xf cmake.tar.gz --strip 1 -C /usr
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev
   - mkdir build
   - cd build
@@ -186,7 +189,10 @@ steps:
   image: ubuntu:bionic
   commands:
   - apt-get update
-  - apt-get install -qq build-essential cmake wget
+  - apt-get install -qq build-essential wget
+    # install a custom version of cmake because bionic is old
+  - wget https://github.com/Kitware/CMake/releases/download/v3.13.5/cmake-3.13.5-Linux-x86_64.tar.gz -O cmake.tar.gz
+  - tar xf cmake.tar.gz --strip 1 -C /usr
   - apt-get install -qq libsdl2-dev libpng-dev libtiff-dev libjpeg-dev libgdal-dev
   #- apt-get remove -qq libsdl2-dev  # remove it but keep the dependencies
   #- wget https://www.libsdl.org/release/SDL2-2.0.12.tar.gz
