cleanup USE_PLAMBDA usage and dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ option(USE_LIBRAW "compile with LibRAW support" OFF)
 option(USE_GDAL "compile with GDAL support" OFF)
 option(USE_IIO "compile with IIO support" ON)
 option(USE_IIO_NPY "compile with IIO numpy support" ON)
-cmake_dependent_option(USE_PLAMBDA "compile with plambda support" ON "USE_IIO" OFF)
+option(USE_PLAMBDA "compile with plambda support" ON)
 
 if(MSYS OR MSVC)
 	set(WINDOWS 1)
@@ -367,6 +367,7 @@ set(SOURCES ${SOURCES}
 )
 
 if(USE_PLAMBDA)
+    add_definitions(-DUSE_PLAMBDA)
     set(SOURCES ${SOURCES}
         src/wrapplambda.c
     )
