CMakeLists.txt: enable IPO for lua on RelWithDebInfo and MinSizeRel configs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,6 +280,8 @@ add_library(lua STATIC
 )
 if(IPO_SUPPORTED)
    set_target_properties(lua PROPERTIES INTERPROCEDURAL_OPTIMIZATION_RELEASE TRUE)
+   set_target_properties(lua PROPERTIES INTERPROCEDURAL_OPTIMIZATION_RELWITHDEBINFO TRUE)
+   set_target_properties(lua PROPERTIES INTERPROCEDURAL_OPTIMIZATION_MINSIZEREL TRUE)
 endif()
 
 #################
